2016-09-30  Mikael Magnusson  <mikachu@gmail.com>

	* 39452 + comment from 39432: Src/Zle/zle_main.c: Call the
	pre-redraw hook if there is text in the buffer on init (from
	popping or zle-line-init setting $BUFFER)

2016-09-30  Oliver Kiddle  <opk@zsh.org>

	* 39514: Completion/Unix/Command/_git: handle --git-dir

	* 39513: Completion/Unix/Command/_doas: new doas completion

	* 39464: Completion/Solaris/Command/_fmadm: fix where lack
	of $state check caused unwanted filename completion

2016-09-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 39507: Doc/Zsh/params.yo, Src/exec.c: TMPSUFFIX for =(...)

	* 39470: Src/exec.c, Src/utils.c: failure to open a supposedly
	unique temp file name should result in an error; band-aid for
	signal-related race conditions in temp file name generation

2016-09-29  Peter Stephenson  <p.stephenson@samsung.com>

	* 39502: Src/exec.c, Test/A01grammar.ztst: need to fork for
	assignment in LHS of pipeline.

	* unposted: Src/Zle/compctl.c, Src/Zle/zle_tricky.c: update
	findcmd() call here, too.

	* 39493: Src/builtin.c, Src/exec.c, Src/subst.c,
	Test/A01grammar.ztst: make "command" with multiple options work
	better and ensure "command -p" with "-v" or "-V" checks for a
	builtin and then using the system default command path.

2016-09-28  Peter Stephenson  <p.stephenson@samsung.com>

	* Martijn Dekker: 39463: configure.ac: another way of getting
	the default system path.

	* 39460: Src/params.c, Src/zsh.h: don't import PS4 if running as
	root.  Currently no known exploit with this in zsh as xtrace
	needs an explicit option setting, so this is just precautionary.

2016-09-27  Oliver Kiddle  <opk@zsh.org>

	* Marko Myllynen: 39453: Completion/Unix/Command/_openstack:
	new openstack completions

	* 39369 (tweaked cf 39371): Src/Zle/zle_thingy.c: when calling
	an internal widget, set bindk because some widgets use it to
	determine how they should act

2016-09-27  Barton E. Schaefer  <schaefer@zsh.org>
