@@ -1,3 +1,8 @@
+2016-09-30  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 39498: Src/parmas.c,Src/zsh.h: use PRIVILEGED option to
+	decide on problematic parameter imports.
+
 2016-09-30  Mikael Magnusson  <mikachu@gmail.com>
 
 	* 39452 + comment from 39432: Src/Zle/zle_main.c: Call the
